<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="18dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/cancel_create_habit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_a_habit"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>

                <Button
                    android:id="@+id/save_create_habit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"
                    />
        </LinearLayout>

        <EditText
            android:id="@+id/habit_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/habit_s_name"/>

        <EditText
            android:id="@+id/habit_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/habit_s_description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_the_goal_of_this_habit"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:id="@+id/goals_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_the_priority_of_the_habit"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/priority_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_mentor_for_the_habit"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/mentor_mail_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter the mentor mail"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/set_habit_time_period_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_the_time_period_for_the_habit"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"/>
        <TextView
            android:id="@+id/set_time_period_error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time_error_message"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"
            />



    </LinearLayout>


</RelativeLayout>