<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="18dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="18dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/repeat_every"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="center_vertical"
            />

        <Spinner
            android:id="@+id/habit_time_frequency_repeat_every_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <Spinner
            android:id="@+id/habit_time_frequency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />

        </LinearLayout>


        <TextView
            android:id="@+id/repeat_on_days_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_on"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_marginBottom="18dp"
            android:visibility="gone"
            />


        <LinearLayout
            android:id="@+id/days_of_week_text_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="10dp"
                android:text="@string/s"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:text="@string/m"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:text="@string/t"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:text="@string/w"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:text="@string/t"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:text="@string/f"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:text="@string/s"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/days_of_week_check_box_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/sunday_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/monday_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/tuesday_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:gravity="center" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/wednesday_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/thursday_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/friday_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/saturday_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ends"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_margin="18dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/habit_time_ending_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="18dp"
                >

                <RadioButton
                    android:id="@+id/never_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/never"/>

                <RadioButton
                    android:id="@+id/on_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on"/>
                <RadioButton
                    android:id="@+id/after_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/after"/>

            </RadioGroup>

            <!-- todo set table ui to select-->

            <EditText
                android:id="@+id/date_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:hint="@string/dd_mm_yyyy"
                android:maxLength="10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="18dp"
                android:enabled="false"
                />

            <Spinner
                android:id="@+id/habit_time_ending_after_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                app:layout_constraintLeft_toRightOf="@+id/habit_time_ending_radio_group"
                app:layout_constraintRight_toLeftOf="@+id/habit_time_ending_after_text_view"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/habit_time_ending_after_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/occurrences"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_marginBottom="10dp"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/habit_time_ending_after_spinner"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/finish_select_time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="@string/finish"/>



    </LinearLayout>
</RelativeLayout>